--- a/utils/pom.xml
+++ b/utils/pom.xml
@@ -10,22 +10,23 @@
         <version>1.0-SNAPSHOT</version>
     </parent>
 
-    <groupId>com.epam.utils</groupId>
-    <artifactId>utils-library</artifactId>
-    <version>1.0</version>
+    <groupId>org.example</groupId>
+    <artifactId>utils</artifactId>
+    <version>1.3.5</version>
 
     <dependencies>
         <!-- https://mvnrepository.com/artifact/org.apache.commons/commons-lang3 -->
         <!-- something should be here-->
         <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>3.10</version>
+        </dependency>
+
+        <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-params</artifactId>
             <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.commons</groupId>
-            <artifactId>commons-lang3</artifactId>
-            <version>3.12.0</version>
         </dependency>
     </dependencies>
 </project>
